CV2ANDRIOD-493 CV2ANDRIOD-504
Alignment Issues Fixed

--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -260,11 +260,11 @@
 <!--                    </LinearLayout>-->
 
 
-
                     <RelativeLayout
                         android:id="@+id/payLL"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_80sdp"
+                        android:layout_marginTop="@dimen/_13ssp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -281,7 +281,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="$"
+                                android:text="$ "
                                 android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_20sdp"
@@ -307,7 +307,7 @@
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:cursorVisible="true"
-                                    android:textCursorDrawable="@drawable/cursor_green"
+                                    android:textCursorDrawable="@drawable/cursorcolor"
                                     android:textSize="@dimen/_53ssp" />
 
                                 <TextView
@@ -319,6 +319,7 @@
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp"
                                     android:visibility="visible"></TextView>
+
                             </LinearLayout>
 
                             <ImageView
@@ -326,7 +327,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_10ssp"
-                                android:layout_marginBottom="@dimen/_10ssp"
+                                android:layout_marginBottom="@dimen/_14ssp"
                                 android:layout_gravity="bottom"
                                 android:src="@drawable/ic_download" />
 
@@ -339,6 +340,7 @@
                         android:layout_height="@dimen/_1sdp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="@dimen/_15sdp"
+                        android:layout_marginTop="@dimen/_13ssp"
                         android:layout_marginRight="@dimen/_15sdp"
                         android:background="#d8e2f0" />
 
