--- a/app/src/main/res/layout/activity_pay_to_personal.xml
+++ b/app/src/main/res/layout/activity_pay_to_personal.xml
@@ -140,7 +140,8 @@
                     <RelativeLayout
                         android:id="@+id/payLL"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_80sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_13ssp"
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -157,7 +158,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="$"
+                                android:text="$ "
                                 android:layout_gravity="top"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_20sdp"
@@ -197,14 +198,14 @@
                                     android:visibility="visible"></TextView>
                             </LinearLayout>
 
-                            <ImageView
-                                android:id="@+id/imgConvert"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_10ssp"
-                                android:layout_marginBottom="@dimen/_10ssp"
-                                android:layout_gravity="bottom"
-                                android:src="@drawable/ic_download" />
+                        <ImageView
+                            android:id="@+id/imgConvert"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10ssp"
+                            android:layout_marginBottom="@dimen/_14ssp"
+                            android:layout_gravity="bottom"
+                            android:src="@drawable/ic_download" />
 
                         </LinearLayout>
 
@@ -287,7 +288,7 @@
                         android:layout_height="@dimen/_1sdp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="@dimen/_15sdp"
-                        android:layout_marginTop="@dimen/_20sdp"
+                        android:layout_marginTop="@dimen/_15ssp"
                         android:layout_marginRight="@dimen/_15sdp"
                         android:background="#d8e2f0" />
 
