CR 21/03/2022 - v1 Placeholders, ForgotPIN redirect to OTP Screen

--- a/app/src/main/res/layout/activity_benificial_mailling_address.xml
+++ b/app/src/main/res/layout/activity_benificial_mailling_address.xml
@@ -300,7 +300,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Zipcode"
+                android:hint="Zip Code"
                 android:layout_marginTop="@dimen/_14sdp"
                 android:textColorHint="@color/light_gray"
                 app:boxStrokeColor="@color/primary_green"
@@ -383,7 +383,6 @@
                         android:enabled="false"
                         android:focusable="false"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/countryhint"
                         android:imeOptions="actionDone"
                         android:inputType="text"
                         android:maxLength="30"
