--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -364,7 +364,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        android:hint="Time Zone (Optional)"
+                        android:hint="Time Zone"
                         android:textColorHint="@color/black"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -382,7 +382,6 @@
                             android:editable="false"
                             android:focusable="false"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="Select time zone"
                             android:imeOptions="actionNext"
                             android:inputType="text|textNoSuggestions"
                             android:maxLength="30"
@@ -819,7 +818,6 @@
                             android:enabled="false"
                             android:focusable="false"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="@string/countryhint"
                             android:imeOptions="actionDone"
                             android:inputType="text"
                             android:maxLength="30"
