--- a/app/src/main/res/layout/activity_payout_details_transaction_list.xml
+++ b/app/src/main/res/layout/activity_payout_details_transaction_list.xml
@@ -74,7 +74,7 @@
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/_1sdp"
+        android:layout_height="1dp"
         android:layout_marginStart="@dimen/_6sdp"
         android:layout_marginEnd="@dimen/_6sdp"
         android:layout_marginBottom="@dimen/_8sdp"
