--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -17,6 +17,15 @@
         android:layout_marginBottom="@dimen/_28sdp"
         android:background="@drawable/button_background"
         android:gravity="center" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="none">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -379,5 +388,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
