--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -55,8 +55,9 @@
                         android:id="@+id/profileCredLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_alignParentStart="true"
+                        android:layout_toLeftOf="@id/profilePicCL"
+                        android:layout_weight="1"
                         android:orientation="vertical"
                         android:paddingStart="@dimen/_21sdp"
                         android:weightSum="2">
