--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -145,13 +145,19 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:orientation="vertical">
 
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/refreshpageSL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewPayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
-
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
