--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -79,10 +79,9 @@
                             android:layout_marginTop="@dimen/_22sdp"
                             android:layout_marginBottom="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Monthly Service Fee"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp" />
-
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -94,8 +93,9 @@
                                 android:id="@+id/MSFamountTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginRight="@dimen/_6sdp"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="100.00 "
+                                android:text=""
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_24ssp" />
 
@@ -141,11 +141,9 @@
                                 android:layout_width="@dimen/_68sdp"
                                 android:layout_height="@dimen/_14sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
-                                android:background="@drawable/fill_grn_color_smallradius"
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center"
-                                android:text="Completed"
-                                android:textColor="@color/active_green"
+                                android:text=""
                                 android:textSize="@dimen/_7ssp" />
 
                         </LinearLayout>
@@ -175,7 +173,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="07/27/2020 10:36:14"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -206,7 +204,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="1d3hsM734h…"
+                                android:text=""
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
@@ -244,7 +242,15 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text="1,000.00 CYN"
+                                android:text=""
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="right"
+                                android:text="@string/currency"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
