--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primary_black"
         android:padding="@dimen/_10sdp"
-        android:textSize="@dimen/_16sdp"
+        android:textSize="@dimen/_11ssp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
