--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -44,7 +45,7 @@
         android:text=""
         android:fontFamily="@font/opensans_semibold"
         android:textColor="@color/primary_black"
-        android:textSize="@dimen/_16sdp"
+        android:textSize="@dimen/_11ssp"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_5sdp"
@@ -53,7 +54,6 @@
         app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
-
 
     <LinearLayout
         android:id="@+id/statusLL"
@@ -93,6 +93,5 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_custom_tick"
         app:tint="@color/primary_green" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
