Withdraw Signet Account https://greenboxdev.atlassian.net/browse/CV2ANDRIOD-312

--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -201,6 +201,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:gravity="center"
+                android:layout_marginStart="@dimen/_11sdp"
                 android:orientation="horizontal"
                 android:visibility="gone">
 
