--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/_27sdp"
-    android:background="@color/white"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.ConfirmPasswordActivity">
 
@@ -17,8 +17,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_above="@id/cardNextbtn"
+            android:layout_alignParentTop="true"
             android:orientation="vertical">
 
             <LinearLayout
@@ -81,7 +81,7 @@
                     android:id="@+id/currentPassET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:autofillHints="creditCardSecurityCode"
+                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                     android:fontFamily="@font/opensans_semibold"
                     android:imeOptions="actionDone"
@@ -93,8 +93,8 @@
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp"
-                    />
+                    android:textIsSelectable="false"
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
