--- a/app/src/main/res/layout/choosepaymentmethod.xml
+++ b/app/src/main/res/layout/choosepaymentmethod.xml
@@ -24,11 +24,11 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
         android:id="@+id/rvSelPayMethods"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="@dimen/_10sdp"></com.greenbox.coyni.utils.ExpandableHeightRecyclerView>
 
     <LinearLayout
         android:id="@+id/lyAddPay"
