--- a/app/src/main/res/layout/activity_business_refund.xml
+++ b/app/src/main/res/layout/activity_business_refund.xml
@@ -173,9 +173,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="Date &amp; Time"
                                 android:textColor="@color/dark_grey"
@@ -203,13 +202,18 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/reference_id"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
+                            <LinearLayout
+                                android:id="@+id/RefundcopyLL"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/refundreferenceTV"
@@ -231,6 +235,7 @@
                                 android:contentDescription="@string/reference_id"
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -242,9 +247,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/fees"
                                 android:textColor="@color/dark_grey"
@@ -278,13 +282,10 @@
                             android:orientation="horizontal"
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
-                            android:paddingRight="@dimen/_11sdp"
-                            android:paddingBottom="@dimen/_11sdp">
-
+                            android:paddingRight="@dimen/_11sdp">
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/total_amount"
                                 android:textColor="@color/dark_grey"
@@ -332,14 +333,13 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
                             android:paddingLeft="@dimen/_11sdp"
-                            android:paddingTop="@dimen/_8sdp"
+                            android:paddingTop="@dimen/_18sdp"
                             android:paddingRight="@dimen/_11sdp"
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/recipient_name"
                                 android:textColor="@color/dark_grey"
@@ -367,12 +367,11 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_11sdp"
-                            android:paddingBottom="@dimen/_11sdp">
+                            android:paddingBottom="@dimen/_15sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/recipient_email"
                                 android:textColor="@color/dark_grey"
@@ -381,7 +380,7 @@
 
                             <TextView
                                 android:id="@+id/refundReciptantEmailTV"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
@@ -395,7 +394,6 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_21sdp"
@@ -410,7 +408,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginRight="@dimen/_11sdp"
                     android:layout_marginBottom="@dimen/_35sdp"
                     app:cardCornerRadius="@dimen/_10sdp">
@@ -425,14 +423,13 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
                             android:paddingLeft="@dimen/_11sdp"
-                            android:paddingTop="@dimen/_8sdp"
+                            android:paddingTop="@dimen/_18sdp"
                             android:paddingRight="@dimen/_11sdp"
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="Date &amp; Time"
                                 android:textColor="@color/dark_grey"
@@ -461,9 +458,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/grossamount"
                                 android:textColor="@color/dark_grey"
@@ -501,9 +497,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/fees"
                                 android:textColor="@color/dark_grey"
@@ -541,9 +536,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/netamount"
                                 android:textColor="@color/dark_grey"
@@ -578,12 +572,11 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_10sdp"
-                            android:paddingBottom="@dimen/_11sdp">
+                            android:layout_marginBottom="@dimen/_16sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/reference_id"
                                 android:textColor="@color/dark_grey"
