--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -158,9 +158,8 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="Date &amp; Time"
                                 android:textColor="@color/dark_grey"
@@ -196,10 +195,14 @@
                                 android:text="Reference ID"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
-
+                            <LinearLayout
+                                android:id="@+id/MSFeecopyLL"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
                             <TextView
                                 android:id="@+id/MSfreferenceIdTV"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
@@ -216,7 +219,7 @@
                                 android:layout_marginLeft="@dimen/_6sdp"
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
-
+                        </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -224,7 +227,7 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_10sdp"
-                            android:paddingBottom="@dimen/_11sdp">
+                            android:paddingBottom="@dimen/_16sdp">
 
                             <TextView
                                 android:layout_width="match_parent"
