--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="light_primary_color">#1900A6A2</color>
 
     <color name="light_gray_black">#404040</color>
+    <color name="orange_status">#FFA701</color>
 
 
 
