--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -111,7 +111,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="@string/uploadid"
+                                android:text="@string/uploadid_cust"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12sdp" />
 
@@ -165,7 +165,7 @@
                                         android:layout_marginEnd="5dp"
                                         android:layout_marginBottom="@dimen/_18sdp"
                                         android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_regular"
+                                        android:fontFamily="@font/opensans_semibold"
                                         android:lineSpacingExtra="@dimen/_6sdp"
                                         android:singleLine="true"
                                         android:text="@string/contentuploadidsuccess"
