Business Payout , Transaction Details Cancelled Withdraw Bank , Failed Withdraw Bank https://greenboxdev.atlassian.net/browse/CV2ANDRIOD-313
https://greenboxdev.atlassian.net/browse/CV2ANDRIOD-517

--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -124,6 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/_7sdp"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:src="@drawable/ic_custom_tick"
                 app:tint="@color/primary_green" />
