--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -41,5 +41,9 @@
         layout="@layout/activity_transaction_details_failed"
         android:visibility="gone"
         />
+    <include
+        android:id="@+id/businessPayout"
+        layout="@layout/activity_merchant_payout"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
