--- a/app/src/main/res/layout/activity_merchant_transactions_list.xml
+++ b/app/src/main/res/layout/activity_merchant_transactions_list.xml
@@ -192,7 +192,7 @@
                     <View
                         android:id="@+id/bottom_corners"
                         android:layout_width="match_parent"
-                        android:layout_height="8dp"
+                        android:layout_height="@dimen/_15sdp"
                         android:background="@drawable/bottom_left_right_corner"
                         android:visibility="visible" />
                     <!--                </androidx.cardview.widget.CardView>-->
